stream_settings: Fix bugs with #stream-creation .modal-footer.
This commit addresses `#stream-creation .modal-footer` becoming
transparent after an error in creating a stream due to overlapping
with `.stream-creation-body`. Instead of adding data-simplebar on
.stream-creation-body, added it to a new div
`stream-creation-simplebar-container` which contains 3 divs:
stream_create_info,stream_creating_indicator and stream-creation-body.

Additionally, fixed the border-radius of the modal footer on the
bottom left side for device width > $md_min.

Fixes #25526

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -685,12 +685,15 @@ h4.user_group_setting_subsection_title {
         outline: none;
         -webkit-overflow-scrolling: touch;
 
+        .stream-creation-simplebar-container {
+            /*
+                45px (.subscriptions-header) +  44px (.display-type) + 60px (.modal-footer)
+            */
+            height: calc(95vh - 149px);
+        }
+
         .user-group-creation-body,
         .stream-creation-body {
-            /*
-                45px (.subscriptions-header) +  44px (.display-type) + 60px (.modal-footer) + 15px (padding for .simplebar-content)
-            */
-            height: calc(95vh - 164px);
             padding: 15px 15px 0;
         }
 
@@ -699,6 +702,12 @@ h4.user_group_setting_subsection_title {
             bottom: 0;
             width: calc(100% - 27px);
             padding-top: 9px;
+        }
+
+        @media (width > $md_min) {
+            .modal-footer {
+                border-radius: 0 0 6px;
+            }
         }
 
         .add_all_users_to_user_group,
